1.8.0/_sources/examples_built/segmentation/fast_streamline_search.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples_built/segmentation/fast_streamline_search.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_built_segmentation_fast_streamline_search.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_built_segmentation_fast_streamline_search.py:


======================
Fast Streamline Search
======================

This example explains how Fast Streamline Search [StOnge2022]_
can be used to find all similar streamlines.

First import the necessary modules.

.. GENERATED FROM PYTHON SOURCE LINES 11-20

.. code-block:: default


    import numpy as np

    from dipy.data import (get_target_tractogram_hcp, get_two_hcp842_bundles,
                           fetch_bundle_atlas_hcp842, fetch_target_tractogram_hcp)
    from dipy.io.streamline import load_trk
    from dipy.segment.fss import FastStreamlineSearch, nearest_from_matrix_row
    from dipy.viz import actor, window


.. GENERATED FROM PYTHON SOURCE LINES 21-22

Download and read data for this tutorial

.. GENERATED FROM PYTHON SOURCE LINES 22-29

.. code-block:: default


    fetch_bundle_atlas_hcp842()
    fetch_target_tractogram_hcp()

    hcp_file = get_target_tractogram_hcp()
    streamlines = load_trk(hcp_file, "same", bbox_valid_check=False).streamlines


.. GENERATED FROM PYTHON SOURCE LINES 30-31

Visualize the atlas (ref) bundle and full brain tractogram

.. GENERATED FROM PYTHON SOURCE LINES 31-43

.. code-block:: default



    interactive = False

    scene = window.Scene()
    scene.SetBackground(1, 1, 1)
    scene.add(actor.line(streamlines))
    if interactive:
        window.show(scene)
    else:
        window.record(scene, out_path='tractograms_initial.png', size=(600, 600))


.. GENERATED FROM PYTHON SOURCE LINES 44-49

.. figure:: tractograms_initial.png
   :align: center

   Atlas bundle and source streamlines before registration.


.. GENERATED FROM PYTHON SOURCE LINES 52-55

Read Arcuate Fasciculus Left and Corticospinal Tract Left bundles from already
fetched atlas data to use them as model bundle. Let's visualize the
Arcuate Fasciculus Left model bundle.

.. GENERATED FROM PYTHON SOURCE LINES 55-73

.. code-block:: default



    model_af_l_file, model_cst_l_file = get_two_hcp842_bundles()
    sft_af_l = load_trk(model_af_l_file, "same", bbox_valid_check=False)
    model_af_l = sft_af_l.streamlines

    scene = window.Scene()
    scene.SetBackground(1, 1, 1)
    scene.add(actor.line(model_af_l, colors=(0, 1, 0)))
    scene.set_camera(focal_point=(-18.17281532, -19.55606842, 6.92485857),
                     position=(-360.11, -30.46, -40.44),
                     view_up=(-0.03, 0.028, 0.89))
    if interactive:
        window.show(scene)
    else:
        window.record(scene, out_path='AF_L_model_bundle.png',
                      size=(600, 600))


.. GENERATED FROM PYTHON SOURCE LINES 74-79

.. figure:: AF_L_model_bundle.png
   :align: center

   Model Arcuate Fasciculus Left bundle


.. GENERATED FROM PYTHON SOURCE LINES 82-100

Search for all similar streamlines  [StOnge2022]_

Fast Streamline Search can do a radius search
to find all streamlines that are similar to from one tractogram to another.
It return the distance matrix mapping between both tractograms.
The same list of streamlines can be given to recover the self distance matrix.

    FastStreamlinesSearch Class
    - ref_streamlines : reference streamlines, that will be searched in (tree)
    - max_radius : is the maximum distance that can be used with radius search

    radius_search() function
    - radius : for each streamline search find all similar ones in the
        "ref_streamlines" that are within the given radius

    Be cautious, a large radius might result in a dense distance computation,
    requiring a large amount of time and memory.
    Recommended range of the radius is from 1 to 10 mm.

.. GENERATED FROM PYTHON SOURCE LINES 100-107

.. code-block:: default



    radius = 7.0
    fs_tree_af = FastStreamlineSearch(ref_streamlines=model_af_l, max_radius=radius)
    coo_mdist_mtx = fs_tree_af.radius_search(streamlines, radius=radius)



.. GENERATED FROM PYTHON SOURCE LINES 108-109

Extract indices of streamlines with an similar ones in the reference

.. GENERATED FROM PYTHON SOURCE LINES 109-115

.. code-block:: default


    ids_s = np.unique(coo_mdist_mtx.row)
    ids_ref = np.unique(coo_mdist_mtx.col)

    recognized_af_l = streamlines[ids_s]


.. GENERATED FROM PYTHON SOURCE LINES 116-117

let's visualize streamlines similar to the Arcuate Fasciculus Left bundle

.. GENERATED FROM PYTHON SOURCE LINES 117-131

.. code-block:: default



    scene = window.Scene()
    scene.SetBackground(1, 1, 1)
    scene.add(actor.line(recognized_af_l, colors=(0, 0, 1)))
    scene.set_camera(focal_point=(-18.17281532, -19.55606842, 6.92485857),
                     position=(-360.11, -30.46, -40.44),
                     view_up=(-0.03, 0.028, 0.89))
    if interactive:
        window.show(scene)
    else:
        window.record(scene, out_path='AF_L_recognized_bundle.png',
                      size=(600, 600))


.. GENERATED FROM PYTHON SOURCE LINES 132-137

.. figure:: AF_L_recognized_bundle.png
   :align: center

   Recognized Arcuate Fasciculus Left bundle


.. GENERATED FROM PYTHON SOURCE LINES 140-141

Color the resulting AF by the nearest streamlines distance

.. GENERATED FROM PYTHON SOURCE LINES 141-159

.. code-block:: default



    nn_s, nn_ref, nn_dist = nearest_from_matrix_row(coo_mdist_mtx)

    scene = window.Scene()
    scene.SetBackground(1, 1, 1)
    cmap = actor.colormap_lookup_table(scale_range=(nn_dist.min(), nn_dist.max()))
    scene.add(actor.line(recognized_af_l, colors=nn_dist, lookup_colormap=cmap))
    scene.add(actor.scalar_bar(cmap, title="distance to atlas (mm)"))
    scene.set_camera(focal_point=(-18.17281532, -19.55606842, 6.92485857),
                     position=(-360.11, -30.46, -40.44),
                     view_up=(-0.03, 0.028, 0.89))
    if interactive:
        window.show(scene)
    else:
        window.record(scene, out_path='AF_L_recognized_bundle_dist.png',
                      size=(600, 600))


.. GENERATED FROM PYTHON SOURCE LINES 160-165

.. figure:: AF_L_recognized_bundle_dist.png
   :align: center

   Recognized Arcuate Fasciculus Left bundle colored by distance to ref


.. GENERATED FROM PYTHON SOURCE LINES 168-169

Display the streamlines reference reached in green

.. GENERATED FROM PYTHON SOURCE LINES 169-190

.. code-block:: default


    # Default red color
    ref_color = np.zeros((len(model_af_l), 3), dtype=float)
    ref_color[:] = (1.0, 0.0, 0.0)

    # Reached in green color
    ref_color[ids_ref] = (0.0, 1.0, 0.0)

    scene = window.Scene()
    scene.SetBackground(1, 1, 1)
    scene.add(actor.line(model_af_l, ref_color))
    scene.set_camera(focal_point=(-18.17281532, -19.55606842, 6.92485857),
                     position=(-360.11, -30.46, -40.44),
                     view_up=(-0.03, 0.028, 0.89))

    if interactive:
        window.show(scene)
    else:
        window.record(scene, out_path='AF_L_model_bundle_reached.png',
                      size=(600, 600))


.. GENERATED FROM PYTHON SOURCE LINES 191-196

.. figure:: AF_L_model_bundle_reached.png
   :align: center

   Arcuate Fasciculus Left model reached (green) in radius


.. GENERATED FROM PYTHON SOURCE LINES 199-205

References
----------

.. [StOnge2022] St-Onge E. et al. Fast Streamline Search:
                An Exact Technique for Diffusion MRI Tractography.
                Neuroinformatics, 2022.

.. GENERATED FROM PYTHON SOURCE LINES 207-209

.. include:: ../../links_names.inc



.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.000 seconds)


.. _sphx_glr_download_examples_built_segmentation_fast_streamline_search.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: fast_streamline_search.py <fast_streamline_search.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: fast_streamline_search.ipynb <fast_streamline_search.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
